fix skills, add covers for projects

--- a/src/App.css
+++ b/src/App.css
@@ -217,7 +217,6 @@
 }
 
 .skills__list {
-    outline: 1px solid red;
     list-style: none;
     margin: 0 auto;
     padding: 0;
@@ -225,11 +224,12 @@
     align-items: center;
     justify-items: center;
     justify-content: space-between;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-flow:row;
     grid-row-gap: 15px;
   margin-top: 60px;
     width: 70%;
+    max-width: 800px;
 }
 
 .skills__item {
